--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,9 +1,16 @@
+
 {
   "compilerOptions": {
     "target": "esnext",
     "module": "commonjs",
     "baseUrl": "src"
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "include": ["src/**/*", "src/setupProxy.js", "node_modules/aplayer"],
+  "exclude": ["node_modules"],
+  "proxy": {
+    "/api/**": {
+      "target": "http://192.168.10.216:31839",
+      "changeOrigin": true
+    }
+  }
 }
